Conversion auto avec les types de données
- Affichage du symbole monétaire en fonction du code devise
- Validation des données d'un formulaire lors de la saisie

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -43,6 +43,7 @@
       "type": "XML",
       "id": "app"
     },
+    "handleValidation": true,
     "routing": {
       "config": {
         "routerClass": "sap.m.routing.Router",
